@@ -65,6 +65,8 @@
       --add-opens com.generic.core/com.generic.core.util.serializer=ALL-UNNAMED
 
       --add-reads com.generic.core=ALL-UNNAMED
+
+      --add-exports com.generic.core/com.generic.core.shared=ALL-UNNAMED
     </javaModulesSurefireArgLine>
 
     <!-- If JMH benchmarking was ran Checkstyle may fail on jmh_benchmark generated classes, ignore them. -->
@@ -203,8 +205,6 @@
       </activation>
 
       <properties>
-        <!-- JMH needs annotation processing on, so disable proc == none -->
-        <compiler.proc></compiler.proc>
       </properties>
 
       <build>
